<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">


    <GridLayout
        android:id="@+id/gridboard"
        android:layout_width="289dp"
        android:layout_height="442dp"
        android:orientation="horizontal"
        android:visibility="visible">

    </GridLayout>

    <LinearLayout
        android:layout_width="423dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pausa"
            android:text="@string/pausa" />

        <Button
            android:id="@+id/gira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="girar"
            android:text="@string/girar" />

        <Button
            android:id="@+id/baixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cair"
            android:text="@string/baixo" />

        <Button
            android:id="@+id/Esquerda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="esquerda"
            android:text="@string/esquerda" />

        <Button
            android:id="@+id/Direita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="direta"
            android:text="@string/direita" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recorde:" />

        <TextView
            android:id="@+id/recordeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recorde" />

    </LinearLayout><![CDATA[








    />





]]>
</LinearLayout>
