<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E283C"
    tools:context=".telaInicial">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/novo_jogo"
        app:layout_constraintBottom_toTopOf="@+id/configBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/configBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:text="@string/continuar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/configura_es"
        app:layout_constraintStart_toStartOf="@+id/configBtn"
        app:layout_constraintTop_toBottomOf="@+id/configBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FD0000"
        android:text="TETRIS"
        android:textColor="#A31919"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="151dp" />


</androidx.constraintlayout.widget.ConstraintLayout>